# label-studio

./: checkingVersionEdition.py  pyproject.toml  schema.json
.github/workflows/: docker-build-ontop.yml  docker-build.yml  docker-release-promote.yml
docs/source/templates/: pdf_ocr.md
label_studio/: feature_flags.json
label_studio/core/: permissions.py  urls.py
label_studio/core/settings/: base.py
label_studio/data_import/: api.py  functions.py
label_studio/io_storages/: base_models.py
label_studio/projects/: models.py  serializers.py  urls.py  views.py
label_studio/projects/migrations/: 0034_tool.py  0035_remove_tool_description_remove_tool_title_tool_name.py
label_studio/tools/: __init__.py  api.py  models.py  serializers.py  urls.py  views.py
label_studio/tools/migrations/: 0001_initial.py
my-label-studio/: pyproject.toml
web/: package.json
web/apps/labelstudio/src/assets/images/: index.js
web/apps/labelstudio/src/components/Menubar/: Menubar.jsx
web/apps/labelstudio/src/components/Modal/: Modal.scss
web/apps/labelstudio/src/pages/CreateProject/: CreateProject.jsx
web/apps/labelstudio/src/pages/Settings/: index.jsx
web/apps/labelstudio/src/providers/: ApiProvider.tsx
web/libs/core/src/atoms/: user.ts
web/libs/core/src/providers/: AuthProvider.tsx
web/libs/editor/src/components/AnnotationTabs/: AnnotationTabs.jsx
web/libs/editor/src/components/AnnotationsCarousel/: AnnotationButton.tsx
web/libs/editor/src/components/CurrentEntity/: AnnotationHistory.tsx
web/libs/editor/src/components/TopBar/: Annotations.jsx
(+15 files in other folders)
