[project]
name = "my-label-studio"
version = "0.1.0"
description = ""
authors = [
    {name = "La Minh Duc",email = "23020526@vnu.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_label_studio", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
